--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -8,12 +8,13 @@
 
     <TextView
         android:id="@+id/bluetooth_activity_declare"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="67dp"
-        android:layout_marginEnd="151dp"
+        android:layout_width="303dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="56dp"
         android:text="@string/bluetooth_activity_declare"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,12 +23,13 @@
         android:id="@+id/start_name_activity_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="103dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="52dp"
-        android:text="@string/start_name_activity"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="136dp"
+        android:layout_marginEnd="163dp"
         android:onClick="onStartNameActivityClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/start_name_activity"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bluetooth_activity_declare" />
 </androidx.constraintlayout.widget.ConstraintLayout>
