Bluetooth UI completed. Leads to Name.Activity

--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -8,25 +8,28 @@
 
     <TextView
         android:id="@+id/bluetooth_activity_declare"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="67dp"
-        android:layout_marginEnd="151dp"
+        android:layout_width="249dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="156dp"
+        android:layout_marginEnd="81dp"
         android:text="@string/bluetooth_activity_declare"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/start_name_activity_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="103dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="52dp"
-        android:text="@string/start_name_activity"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="162dp"
+        android:layout_marginEnd="162dp"
+        android:layout_marginBottom="340dp"
         android:onClick="onStartNameActivityClicked"
+        android:text="@string/start_name_activity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
