--- a/app/src/main/res/layout/activity_name_photo_display.xml
+++ b/app/src/main/res/layout/activity_name_photo_display.xml
@@ -4,6 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListActivity">
+    tools:context=".NamePhotoDisplayActivity">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/persons_view"
+        android:layout_width="405dp"
+        android:layout_height="410dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="6dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
