--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -72,33 +72,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.949" />
 
+
     <Button
         android:id="@+id/button"
         android:layout_width="122dp"
         android:layout_height="43dp"
-        android:onClick="onGoBackClicked"
+        android:onClick="onExitClicked"
         android:text="Back"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.078"
+        app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.986" />
-
-    <Button
-        android:id="@+id/buttonForEdit"
-        android:layout_width="125dp"
-        android:layout_height="43dp"
-        android:onClick="onEditClicked"
-        android:text="Edit"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.071"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.903" />
+        app:layout_constraintVertical_bias="0.944" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/courses_view"
