profileActivity (with student object)

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,13 +26,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_name"
         />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/profile_course_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="413dp"
+        android:layout_height="474dp"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/avatar"
-        tools:listitem="@layout/course_item"/>
+        tools:listitem="@layout/course_item" />
 
     <Button
         android:id="@+id/back"
@@ -46,4 +47,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
+
+    <TextView
+        android:id="@+id/previousCourses"
+        android:layout_width="198dp"
+        android:layout_height="23dp"
+        android:text="Previous Courses:"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.551" />
 </androidx.constraintlayout.widget.ConstraintLayout>
