--- a/app/src/main/res/layout/student_item.xml
+++ b/app/src/main/res/layout/student_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:id="@+id/find_student"
     android:orientation="horizontal">
     <TextView
         android:id="@+id/student_name"
@@ -11,10 +12,5 @@
         android:text="Student's first name"
         android:textSize="18sp"/>
     <!-- comment -->
-    <Button
-        android:layout_marginStart="80dp"
-        android:layout_gravity="center"
-        android:hint="info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
 </LinearLayout>
