--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -8,12 +8,12 @@
 
     <EditText
         android:id="@+id/year_view"
-        android:layout_width="365dp"
-        android:layout_height="56dp"
+        android:layout_width="353dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:hint="Year"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.347"
+        app:layout_constraintHorizontal_bias="0.224"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,42 +21,55 @@
 
     <EditText
         android:id="@+id/quarter_view"
-        android:layout_width="365dp"
-        android:layout_height="56dp"
+        android:layout_width="353dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:hint="Quarter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.347"
+        app:layout_constraintHorizontal_bias="0.224"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6" />
+        app:layout_constraintVertical_bias="0.589" />
 
     <EditText
         android:id="@+id/courseName_view"
-        android:layout_width="365dp"
-        android:layout_height="56dp"
+        android:layout_width="353dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:hint="CourseName"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.347"
+        app:layout_constraintHorizontal_bias="0.189"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.703" />
+        app:layout_constraintVertical_bias="0.677" />
 
     <EditText
         android:id="@+id/courseNum_view"
-        android:layout_width="365dp"
-        android:layout_height="56dp"
+        android:layout_width="353dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:hint="CourseNumber"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.347"
+        app:layout_constraintHorizontal_bias="0.224"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.804" />
+        app:layout_constraintVertical_bias="0.762" />
+
+    <EditText
+        android:id="@+id/courseSize_view"
+        android:layout_width="353dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="CourseSize"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.189"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.845" />
 
     <Button
         android:id="@+id/buttonForEnterCourse"
