--- a/app/src/main/res/layout/session_item.xml
+++ b/app/src/main/res/layout/session_item.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:id="@+id/find_student"
+    android:id="@+id/find_session"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/student_name"
+        android:id="@+id/session_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Student's first name"
+        android:text="Session"
         android:textSize="18sp"/>
 
 </LinearLayout>
