--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,18 +49,32 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/student_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="352dp"
+        android:layout_height="519dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/feather"
-        tools:listitem="@layout/student_item"/>
+        tools:listitem="@layout/student_item" />
 
     <Button
         android:id="@+id/my_profile"
         android:layout_width="107dp"
         android:layout_height="64dp"
         android:text="MY PROFILE"
+        android:textSize="13sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/my_session"
+        android:layout_width="85dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="320dp"
+        android:text="MY Session"
+        android:onClick="goToSessionClick"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
